1.011: minor correction in the code of honor + quicknote about clearing the cache + minor correction of the code of honor book gif blocking the scrollbar

--- a/src/style/home.css
+++ b/src/style/home.css
@@ -254,6 +254,7 @@ header aside p {
     bottom: .25em;
     right: -1.25em;
     transform: rotateZ(-10deg);
+    pointer-events: none;
 }
 
 /* ------ */
